--- a/templates/select_view.html
+++ b/templates/select_view.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -173,4 +173,4 @@
         });
     </script>
 </body>
-</html>
+</html> -->
