--- a/templates/login.html
+++ b/templates/login.html
@@ -193,7 +193,7 @@
             justify-content: space-between;
             align-items: flex-start;
             width: 100%;
-            margin-top: 40px;
+            /* margin-top: 40px; */
         }
 
         .feature-item {
@@ -408,7 +408,7 @@
 
         #footer .site_title {
             color: #000000;
-            font-size: 1.2rem;
+            font-size: 1.5rem;
         }
 
         #footer ul {
@@ -424,7 +424,7 @@
         }
 
         #footer li a {
-            color: v#86868B;
+            color: #86868B;
             text-decoration: none;
             font-size: 0.85rem;
             transition: color 0.2s;
