運営者の設定とローディングの変更

--- a/templates/login.html
+++ b/templates/login.html
@@ -696,6 +696,7 @@
                 <li><a href="#concept">コンセプト</a></li>
                 <li><a href="#start">始め方</a></li>
                 <li><a href="privacy">プライバシーポリシー</a></li>
+                <li><a href="https://hond25.github.io/hond-portfolio-site/">運営者</a></li>
             </ul>
         </nav>
     </footer>
