広告用URLを取得しないように除外キーワードに追加

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -685,7 +685,7 @@
                             })
                             .then(response => {
                                 if (response.ok) {
-                                    alert('記事を削除しました。');
+                                    // alert('記事を削除しました。');
                                     window.location.href = '/dashboard';
                                 } else {
                                     throw new Error('削除に失敗しました。');
