--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -16,7 +16,8 @@
     
     <style>
         body {
-            font-family: 'Jost', 'Noto Sans JP', -apple-system, BlinkMacSystemFont, sans-serif;
+            /* font-family: 'Jost', 'Noto Sans JP', -apple-system, BlinkMacSystemFont, sans-serif; */
+            font-family:'Noto Sans JP', -apple-system, BlinkMacSystemFont, sans-serif;
             margin: 0;
             background-color: #FBFBFD;
             color: #1D1D1F;
@@ -63,6 +64,7 @@
         }
 
         .user-info {
+            font-family: 'Jost', -apple-system, BlinkMacSystemFont, sans-serif;
             font-size: 0.9em;
             color: #86868B;
             display: flex;
@@ -159,6 +161,7 @@
         }
 
         .article-title {
+            font-family: 'Noto Sans JP';
             margin-top: 20px;
             margin-bottom: 10px;
             font-size: 2.2em;
