スマホ版のパンくずフォントサイズの変更

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -454,6 +454,7 @@
             }
             
             .breadcrumbs {
+                font-size: 0.6rem;
                 padding: 12px 20px;
             }
 
