--- a/templates/login.html
+++ b/templates/login.html
@@ -609,7 +609,8 @@
                 読んだだけの知識は使える技術として定着する前に失われがちです。<br>
                 Tech Log はその「知識」と「技術」のギャップを埋めるためのサービスです。<br>
                 まず、AIがあなたの閲覧履歴からIT技術の情報だけを自動で収集、整理。<br>
-                あなたが「何を学んだか」を振り返ることで、その情報を「確かな技術」として定着させます。
+                あなたが「何を学んだか」を振り返ることで、その情報を「確かな技術」として定着させます。<br><br>
+                より効果的に使っていただくために1日の終わりに振り返りを行い、<br>翌日の朝などに見直すことを推奨しています。
             </p>
         </section>
 
